assets/css/style.css
/* ... */
/*RESULT CARD*/

.card {
  margin: 0 auto;
  padding: 10px;
  margin-top: 30px;
  margin-bottom: 20px;
  background-color: rgba(11, 82, 91, 1);
  border-radius: 10px;
  font-family: "New Tegomin", serif;
  box-shadow: 0px 2px 5px rgb(255 255 255 / 20%);
  border: 1px solid #ddd;
  width: 40rem;
}

.card-text {
  color: #ddd;
  padding: 20px 20px;
  text-align: justify;
  margin: 5px 0px;
}

.card-title {
  color: #ddd;
  text-align: center;
  font-size: x-large;
  margin: 10px 10px;
}

.image {
  display: flex;
  padding: 10px;
  width: 70%;
  margin: auto;
  justify-content: center;
}

.btn-primary {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 500;
  text-align: justify;
  color: #ddd;
  display: flex;
  justify-content: center;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

#results-modal,
#all-results-modal {
  background: rgba(0, 0, 0, 0.7);
  animation: zoomIn 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
  justify-content: space-around;
  display: none;
}

#results-btn {
  display: none;
}

.button-close-modal {
    display: block;
    font-size: 1rem;
    font-weight: bold;
    margin-left: auto;
}

#results-div {
    padding: 10%;
}

#career-div,
#results-div {
    display: flex;
    flex-wrap: wrap;
    flex: 1 0 auto;
}

#all-careers p,
#all-careers a,
#results-card p,
#results-card a {
    display: flex;
    justify-content: space-evenly;
}

#all-careers a,
#results-card a,
.white-link {
    text-decoration: underline;
    color: #0b525b;
    font-size: 1rem;
    background-color: #f7fcff;
}

#all-careers a:hover {
    font-size-adjust: 110%;
}

.results-img {
    height: 330px;
    width: 280px;
    object-fit: cover;
}

.results-card {
    background-color: rgba(11, 82, 91, 1);
    width: 31.3%;
    display: inline-flex;
    margin: 1%;
    color: white;
    font-family: "New Tegomin", serif;
    box-shadow: 0px 2px 15px rgb(31 37 75 / 80%);
    padding-left: 1.5%;
    padding-right: 1.5%;
    padding-bottom: 5%;
    align-items: center;
    flex-direction: column;
}

.results-card img {
    margin: 5%;
    width: 80%;
}

.results-card h5 {
    font-size: 1.4rem;
    border-bottom: brown 1px;
}

.results-card p {
    font: 1rem;
    align-self: flex-start;
}

.results-card:last-child {
    margin-right: 35%;
    margin-left: 35%;
}

#results-div {
  padding: 10%;
}

#career-div,
#results-div {
  display: flex;
  flex-wrap: wrap;
  flex: 1 0 auto;
}

#all-careers p,
#all-careers a,
#results-card p,
#results-card a {
  display: flex;
  justify-content: space-evenly;
}

#all-careers a,
#results-card a,
.white-link {
  text-decoration: underline;
  color: #0b525b;
  font-size: 1rem;
  background-color: #f7fcff;
}

#all-careers a:hover {
  font-size-adjust: 110%;
}

.results-img {
  height: 330px;
  width: 280px;
  object-fit: cover;
}

.results-card {
  background-color: rgba(11, 82, 91, 1);
  width: 31.3%;
  display: inline-flex;
  margin: 1%;
  color: white;
  font-family: "New Tegomin", serif;
  box-shadow: 0px 2px 15px rgb(31 37 75 / 80%);
  padding-left: 1.5%;
  padding-right: 1.5%;
  padding-bottom: 5%;
  align-items: center;
  flex-direction: column;
}

.results-card img {
  margin: 5%;
  width: 80%;
}

.results-card h5 {
  font-size: 1.4rem;
  border-bottom: brown 1px;
}

.results-card p {
  font: 1rem;
  align-self: flex-start;
}

.results-card:last-child {
  margin-right: 35%;
  margin-left: 35%;
}

@keyframes zoomIn {
  0% {
    transform: scale(0);
  }

  100% {
    transform: scale(1);
  }
}

/* Resources*/

.resources-card {
  margin: 0 auto;
  border-radius: 5px;
  background-color: #0b525b;
  color: #fff;
  text-align: left;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1rem;
  width: 90%;
  padding: 30px;
}

.women img {
  width: 300px;
  float: left;
  margin: 0 10px 10px 0;
}

.resources-card h3 {
  clear: both;
}

.resources-card p {
  padding: 0 30px;
  text-indent: 2em;
  text-align: justify;
}

.resources-card a {
  text-decoration: none;
}

.women {
  background-color: #f5f5f5;
  color: black;
  margin: 0 -30px;
  padding: 0 30px;
  overflow: hidden;
}

.resources {
  clear: both;
}

.button-resources {
  display: inline-block;
  margin: 0 20px;
}

.buttons {
  text-align: center;
}

.resources li a {
  text-decoration: underline;
  color: white;
}

#all-careers p,
#results-card p,
#results-card a {
  display: flex;
  justify-content: space-evenly;
}

#all-careers a {
  text-decoration: underline;
  color: #0b525b;
  font-size: 1rem;
}

#all-careers a:hover {
  font-size-adjust: 110%;
}

.results-img {
  height: 330px;
  width: 280px;
  object-fit: cover;
}

/*  MEDIA QUERY */
@media only screen and (max-width: 800px) {
  #body-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
      url("../images/tech-girl-mobile.jpg");
  }

  .horizontal-center {
    width: 90%;
  }

  h2.title {
    font-size: 2.2em;
  }

  #question {
    font-size: 1.2em;
  }

  #quiz-container {
    font-size: 1em;
  }
}

@media only screen and (max-width: 600px) {
  .results-card {
    width: 100%;
  }

  .results-card:last-child {
    margin: 1%;
  }

  .card {
    width: 100%;
  }
}
@media only screen and (max-width: 375px) {
  .text-animation {
    line-height: 40px;
  }
  .btn {
    font-size: small;
    padding: 0 0.5rem;
  }
  .delay {
    line-height: 25px;
  }
}

